<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_vault"
        android:icon="@drawable/ic_vault"
        android:title="@string/vault" />
    <item
        android:id="@+id/item_browser"
        android:icon="@drawable/ic_browser"
        android:title="@string/browser" />
    <item
        android:id="@+id/item_note"
        android:icon="@drawable/ic_note"
        android:title="@string/note" />
    <item
        android:id="@+id/item_recycle_bin"
        android:icon="@drawable/ic_delete"
        android:title="@string/recycle_bin" />
    <item
        android:id="@+id/item_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting" />
    <item
        android:id="@+id/item_language"
        android:icon="@drawable/ic_language"
        android:title="@string/language" />
    <item
        android:id="@+id/item_theme"
        android:icon="@drawable/ic_dark_theme"
        android:title="@string/dark_theme" />
    <item
        android:id="@+id/item_rate_app"
        android:icon="@drawable/ic_rate"
        android:title="@string/rate_app" />
    <item
        android:id="@+id/item_share_app"
        android:icon="@drawable/ic_share"
        android:title="@string/share_app" />
    <item
        android:id="@+id/item_about_us"
        android:icon="@drawable/ic_info"
        android:title="@string/about_us" />
    <item
        android:id="@+id/item_privacy"
        android:icon="@drawable/ic_security_private"
        android:title="@string/privacy_policy" />

</menu>