<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_neu01_corner_8"
    android:orientation="vertical"

    android:paddingVertical="@dimen/_8sdp">


    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_image_permission"/>
    <TextView
        android:layout_marginStart="@dimen/_16sdp"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/permission_title"
        android:textColor="@color/neutral_06"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/app_font_500" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_neu03_corner_10"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_16sdp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_back"
            app:tint ="@color/neutral_06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_access"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/neutral_06"
            android:textSize="@dimen/_14sdp"
            android:maxWidth="@dimen/_120sdp"
            android:maxLines="2"

            app:layout_constraintStart_toStartOf="@id/tvSpeedTest"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginEnd="@dimen/_minus8sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_setup_pin"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:src="@drawable/ic_setup_pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />


        <TextView
            android:id="@+id/tvSpeedTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/neutral_06"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/app_font_700"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toEndOf="@+id/imv_logo"
            app:layout_constraintTop_toTopOf="@id/imv_logo" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_setup_pin"
            app:layout_constraintBottom_toBottomOf="@id/imv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imv_logo" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/btn_allow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:text="@string/allow"
            android:textColor="@color/neutral_01"
            android:background="@drawable/bg_primary_corner_10"
            android:textFontWeight="700"
            android:foreground="@drawable/fg_ripple_effect"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>