<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.FragmentHome">

    <ImageView
        android:id="@+id/imv_menu"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/app_font_500"
        android:text="@string/vault"
        android:textColor="@color/neutral_06"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@id/imv_menu"
        app:layout_constraintStart_toEndOf="@id/imv_menu"
        app:layout_constraintTop_toTopOf="@id/imv_menu" />

    <ImageView
        android:id="@+id/imv_new_folder"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/ic_new_folfer_light"
        app:layout_constraintBottom_toBottomOf="@id/imv_menu"
        app:layout_constraintEnd_toStartOf="@id/imv_calculator"
        app:layout_constraintTop_toTopOf="@id/imv_menu" />

    <ImageView
        android:id="@+id/imv_calculator"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/ic_calculator_light"
        app:layout_constraintBottom_toBottomOf="@id/imv_menu"
        app:layout_constraintEnd_toStartOf="@id/imv_option"
        app:layout_constraintTop_toTopOf="@id/imv_menu" />


    <ImageView
        android:id="@+id/imv_option"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/ic_option"
        app:layout_constraintBottom_toBottomOf="@id/imv_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imv_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_pictures"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:background="@drawable/bg_item_calculator_normal"
        app:layout_constraintEnd_toStartOf="@id/container_videos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_menu">

        <ImageView
            android:id="@+id/imv_pictures"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_item_pictures"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/pictures"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_pictures" />

        <TextView
            android:id="@+id/tv_pictures_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@id/tv_pictures"
            app:layout_constraintStart_toEndOf="@id/tv_pictures"
            app:layout_constraintTop_toTopOf="@id/tv_pictures" />

        <ImageView
            android:id="@+id/imv_option_picture"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:src="@drawable/ic_option"
            app:layout_constraintBottom_toBottomOf="@id/tv_pictures"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_pictures" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_videos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_item_calculator_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container_pictures"
        app:layout_constraintTop_toTopOf="@id/container_pictures">

        <ImageView
            android:id="@+id/imv_videos"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_item_videos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_videos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/videos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_videos" />

        <TextView
            android:id="@+id/tv_videos_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@id/tv_videos"
            app:layout_constraintStart_toEndOf="@id/tv_videos"
            app:layout_constraintTop_toTopOf="@id/tv_videos" />

        <ImageView
            android:id="@+id/imv_option_videos"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:src="@drawable/ic_option"
            app:layout_constraintBottom_toBottomOf="@id/tv_videos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_videos" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_audios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:background="@drawable/bg_item_calculator_normal"
        app:layout_constraintEnd_toStartOf="@id/container_files"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_pictures">

        <ImageView
            android:id="@+id/imv_audios"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_item_audios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_audios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/audios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_audios" />

        <TextView
            android:id="@+id/tv_audios_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@id/tv_audios"
            app:layout_constraintStart_toEndOf="@id/tv_audios"
            app:layout_constraintTop_toTopOf="@id/tv_audios" />

        <ImageView
            android:id="@+id/imv_option_audios"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:src="@drawable/ic_option"
            app:layout_constraintBottom_toBottomOf="@id/tv_audios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_audios" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_files"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_item_calculator_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container_audios"
        app:layout_constraintTop_toTopOf="@id/container_audios">

        <ImageView
            android:id="@+id/imv_files"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_item_files"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/files"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_files" />

        <TextView
            android:id="@+id/tv_files_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@id/tv_files"
            app:layout_constraintStart_toEndOf="@id/tv_files"
            app:layout_constraintTop_toTopOf="@id/tv_files" />

        <ImageView
            android:id="@+id/imv_option_files"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:src="@drawable/ic_option"
            app:layout_constraintBottom_toBottomOf="@id/tv_files"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_files" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>